--- a/package.json
+++ b/package.json
@@ -20,9 +20,21 @@
   },
   "homepage": "https://github.com/artamigo/gulp-angular-browserify-sass",
   "devDependencies": {
+    "browser-sync": "^2.5.3",
+    "connect-modrewrite": "^0.7.11",
     "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.1.0",
     "gulp-changed": "^1.2.1",
     "gulp-imagemin": "^2.2.1",
-    "require-dir": "^0.3.0"
+    "gulp-notify": "^2.2.0",
+    "gulp-sass": "^1.3.3",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-util": "^3.0.4",
+    "pretty-hrtime": "^1.0.0",
+    "require-dir": "^0.3.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "watchify": "^3.1.0"
   }
 }
